--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
 }
 
 :root {
-  --black: #272727;
+  --black: #403b3b;
 }
 
 html {
@@ -107,7 +107,7 @@ input:focus {
 .main-content {
   display: grid;
   grid-template-rows: 3fr 1fr;
-  grid-template-columns: 1fr 9fr 1fr;
+  grid-template-columns: 1fr 12fr 1fr;
   grid-row: 2 / 3;
   height: 100%;
   background: rgb(166,166,166);
@@ -119,7 +119,7 @@ input:focus {
 .current-weather-wrapper {
   display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-column: 2 / 3;
   justify-content: center;
   justify-items: center;
@@ -128,7 +128,7 @@ input:focus {
 
 .city-name {
   display: grid;
-  border: 5px solid #C600FF;
+  border: 5px solid #5d79de;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 1fr;
   border-radius: 8px;
@@ -136,7 +136,7 @@ input:focus {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
   padding: 0 10px 0 10px;
-  width: clamp(max-content, 400px, 500px);
+  width: clamp(60px, 250px, 300px);
 }
 
 .city-name > * {
@@ -156,23 +156,25 @@ input:focus {
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   align-self: end;
+  font-size: 12px;
+  padding-bottom: 20px;
 }
 
 .local-day {
   grid-row: 2 / 3;
   align-self: center;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .local-time {
   grid-row: 3 / 4;
   align-self: start;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .city-weather {
   display: grid;
-  border: 5px solid #00FFC6;
+  border: 5px solid #5d79de;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 1fr;
   border-radius: 8px;
@@ -180,6 +182,7 @@ input:focus {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   padding: 0 10px 0 10px;
+  width: clamp(60px, 250px, 300px);
 }
 
 .current-temperature {
@@ -206,29 +209,104 @@ input:focus {
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   align-self: end;
+  font-size: 12px;
+  padding-bottom: 20px;
 }
 
 .feels-like {
+  grid-column: 1 / -1;
   grid-row: 2 / 3;
   align-self: center;
-  font-size: 24px;
+  font-size: 30px;
 }
 
-.label {
-  grid-row: 3 / 4;
-  align-self: start;
-  font-size: 24px;
-  justify-self: center;
+.label-feels {
   grid-column: 1 / -1;
+  grid-row: 2 / 3;
+  align-self: end;
+  font-size: 12px;
+  padding-bottom: 30px;
 }
 
 .min-max-temp {
   grid-row: 3 / 4;
-  align-self: center;
-  font-size: 24px;
+  align-self: start;
+  font-size: 30px;
   justify-self: center;
   grid-column: 1 / -1;
 }
+
+.label {
+  grid-row: 3 / 4;
+  align-self: center;
+  font-size: 12px;
+  justify-self: center;
+  grid-column: 1 / -1;
+  padding-bottom: 30px;
+}
+
+.city-precipitation {
+  display: grid;
+  border: 5px solid #5d79de;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: 1fr;
+  border-radius: 8px;
+  justify-items: center;
+  padding: 0 10px 0 10px;
+  width: clamp(60px, 250px, 300px);
+}
+
+.city-precipitation > * {
+  margin: 0;
+  padding: 0;
+}
+
+.precipitation {
+  font-size: 46px;
+  grid-row: 1 / 2;
+  grid-column: 1 / -1;
+  align-self: center;
+  align-items: center;
+}
+
+.chance-of-rain {
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
+  align-self: end;
+  font-size: 12px;
+  padding-bottom: 20px;
+}
+
+.total-precipitation {
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
+  align-self: center;
+  font-size: 30px;
+}
+
+.mm {
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
+  align-self: end;
+  font-size: 12px;
+  padding-bottom: 30px;
+}
+
+.humidity {
+  grid-column: 1 / -1;
+  grid-row: -2 / -1;
+  align-self: start;
+  font-size: 30px;
+}
+
+.average-humidity {
+  grid-column: 1 / -1;
+  grid-row: -2 / -1;
+  align-self: center;
+  font-size: 12px;
+  padding-bottom: 30px;
+}
+
 
 .footer {
   grid-row: -2 / -1;
@@ -237,27 +315,47 @@ input:focus {
   border: 2px solid #747373;
 }
 
-@media(max-width: 530px) {
+
+@media(max-width: 790px) {
+  .main-content {
+    grid-template-columns: 1fr;
+  }
+
+  .city-name {
+    width: max-content;
+  }
+
+  .city-weather {
+    width: max-content;
+  }
+
+  .city-precipitation {
+    width: max-content;
+  }
+}
+
+@media(max-width: 576px) {
   .header {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto;
   }
-  .main-content {
-    grid-template-columns: 1fr;
-  }
+
   .h1-container {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     justify-self: center;
   }
+
   .search-container {
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     justify-self: center;
   }
+  
   input {
     margin: 0;
   }
+
   .current-weather-wrapper {
     grid-column: 1 / -1;
     grid-template-columns: 1fr;
@@ -265,16 +363,19 @@ input:focus {
     justify-content: center;
     padding-left: 20px;
   }
+
   .city-name {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
     justify-self: center;
-    width: auto;
+    width: 300px;
   }
+
   .city-name > h5 {
     grid-row: 2 / 3;
     align-self: start;
   }
+
   .local-day {
     grid-column: 1 / 2;
     align-self: end;
@@ -282,16 +383,19 @@ input:focus {
   .local-time {
     align-self: center;
   }
+
   .city-weather {
     grid-row: 2 / 3;
     grid-column: 1 / -1;
     justify-self: center;
-    width: auto;
+    width: 300px;
   }
+
   .weather-condition {
     grid-row: 2 / 3;
     align-self: start;
   }
+
   .feels-like {
     grid-column: 1 / 2;
     align-self: end;
@@ -301,5 +405,9 @@ input:focus {
   .min-max-temp {
     align-self: end;
     padding-bottom: 5px;
+  }
+
+  .city-precipitation {
+    width: 300px;
   }
 }
