--- a/src/styles.css
+++ b/src/styles.css
@@ -106,7 +106,7 @@ input:focus {
 
 .main-content {
   display: grid;
-  grid-template-rows: 3fr 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-columns: 1fr 12fr 1fr;
   grid-row: 2 / 3;
   height: 100%;
@@ -133,10 +133,12 @@ input:focus {
   grid-template-columns: 1fr;
   border-radius: 8px;
   justify-items: center;
+  justify-content: center;
   grid-row: 1 / 2;
   grid-column: 1 / 2;
   padding: 0 10px 0 10px;
   width: clamp(60px, 250px, 300px);
+  height: clamp(300px, 400px, 500px);
 }
 
 .city-name > * {
@@ -179,10 +181,12 @@ input:focus {
   grid-template-columns: 1fr;
   border-radius: 8px;
   justify-items: center;
+  justify-content: center;
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   padding: 0 10px 0 10px;
   width: clamp(60px, 250px, 300px);
+  height: clamp(300px, 400px, 500px);
 }
 
 .current-temperature {
@@ -252,8 +256,10 @@ input:focus {
   grid-template-columns: 1fr;
   border-radius: 8px;
   justify-items: center;
+  justify-content: center;
   padding: 0 10px 0 10px;
   width: clamp(60px, 250px, 300px);
+  height: clamp(300px, 400px, 500px);
 }
 
 .city-precipitation > * {
@@ -307,6 +313,73 @@ input:focus {
   padding-bottom: 30px;
 }
 
+.next-forecast-container {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 6fr 6fr 1fr;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  grid-row: 2 / 3;
+  grid-column: 1 / -1;
+  gap: 10px;
+  padding-bottom: 10px;
+}
+
+.next-forecast {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  width: clamp(100px, 300px, 350px);
+  height: clamp(50, 200px, 200px);
+  padding: 10px;
+}
+
+.next-forecast > * {
+  margin: 0;
+  padding: 0;
+}
+
+.next-date {
+  justify-self: center;
+  align-self: center;
+  font-size: 24px;
+}
+
+.next-icon {
+  grid-row: 2 / 3;
+  grid-column: 1 / -1;
+  justify-self: start;
+  align-self: center;
+}
+
+.next-text {
+  grid-row: 2 / 3;
+  grid-column: 1 / -1;
+  justify-self: center;
+  align-self: center;
+}
+
+.next-temp {
+  grid-row: 3 / 4;
+  grid-column: 1 / -1;
+  justify-self: center;
+  align-self: center;
+  font-size: 24px;
+}
+
+.day1 {
+  border: 3px solid #C600FF;
+  grid-column: 2 / 3;
+  border-radius: 6px;
+}
+
+.day2 {
+  border: 3px solid #00FFC6;
+  grid-column: 3 / 4;
+  border-radius: 6px;
+}
+
 
 .footer {
   grid-row: -2 / -1;
@@ -319,6 +392,9 @@ input:focus {
 @media(max-width: 790px) {
   .main-content {
     grid-template-columns: 1fr;
+  }
+  .current-weather-wrapper {
+    grid-column: 1 / -1;
   }
 
   .city-name {
@@ -338,6 +414,11 @@ input:focus {
   .header {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto;
+  }
+
+  .main-content {
+    justify-content: center;
+    justify-items: center;
   }
 
   .h1-container {
@@ -373,14 +454,16 @@ input:focus {
   }
 
   .city-name > h5 {
-    grid-row: 2 / 3;
-    align-self: start;
+    grid-row: 1 / 2;
+    align-self: end;
+    padding-bottom: 25px;
   }
 
   .local-day {
     grid-column: 1 / 2;
-    align-self: end;
+    align-self: center;
   }
+  
   .local-time {
     align-self: center;
   }
@@ -396,7 +479,7 @@ input:focus {
   .weather-condition {
     grid-row: 1 / 2;
     align-self: end;
-    padding-bottom: 0;
+    padding-bottom: 10px;
   }
 
   .feels-like {
@@ -409,7 +492,7 @@ input:focus {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     align-self: end;
-    padding-bottom: 5px;
+    padding-bottom: 25px;
   }
 
   .min-max-temp {
@@ -418,7 +501,7 @@ input:focus {
 
   .label {
     grid-row: 3 / 4;
-    align-self: end;
+    align-self: center;
     padding-bottom: 15px;
   }
 
@@ -464,4 +547,20 @@ input:focus {
     align-self: end;
     padding-bottom: 0;
   }
+
+  .next-forecast-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .day1 {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+  }
+
+  .day2 {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+  }
+
 }
