--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'MontSerrat';
+  src: url('./assets/fonts/montserrat-variablefont_wght-webfont.woff2') format('woff2'),
+    url('./assets/fonts/montserrat-variablefont_wght-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 *,
 *::before,
 *::after {
@@ -23,7 +31,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "MontSerrat" ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .page-wrapper {
@@ -182,20 +190,21 @@ input:focus {
 
 .city-name > h5 {
   font-size: 16px;
-  grid-row: 1 / 2;
+  grid-row: 2 / 3;
   grid-column: 1 / -1;
-  align-self: end;
+  align-self: start;
   font-size: 12px;
-  padding-bottom: 20px;
 }
 
 .local-day {
+  grid-column: 1 / -1;
   grid-row: 2 / 3;
   align-self: center;
   font-size: 30px;
 }
 
 .local-time {
+  grid-column: 1 / -1;
   grid-row: 3 / 4;
   align-self: start;
   font-size: 30px;
