--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 @font-face {
-  font-family: 'MontSerrat';
-  src: url('./assets/fonts/montserrat-variablefont_wght-webfont.woff2') format('woff2'),
-    url('./assets/fonts/montserrat-variablefont_wght-webfont.woff') format('woff');
+  font-family: "MontSerrat";
+  src: url("./assets/fonts/montserrat-variablefont_wght-webfont.woff2")
+      format("woff2"),
+    url("./assets/fonts/montserrat-variablefont_wght-webfont.woff")
+      format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -26,12 +28,14 @@ body {
   height: 100%;
 }
 
-html, 
+html,
 body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: "MontSerrat" ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "MontSerrat", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .page-wrapper {
@@ -47,8 +51,13 @@ body {
   align-items: end;
   gap: 10px;
   grid-row: 1 / 2;
-  background: rgb(255,198,0);
-  background: linear-gradient(115deg, rgba(255,198,0,1) 25%, rgba(255,198,0,1) 50%, rgba(251,210,66,1) 75%, rgba(251,210,66,1) 100%);
+  background: rgb(242, 242, 242);
+  background: linear-gradient(
+    180deg,
+    rgba(242, 242, 242, 1) 0%,
+    rgba(238, 238, 238, 1) 50%,
+    rgba(227, 227, 227, 1) 100%
+  );
   padding-bottom: 10px;
 }
 
@@ -61,7 +70,7 @@ body {
 }
 
 .h1-container > h1 {
-  color: #0039FF;
+  color: #0039ff;
   font-size: 40px;
   padding-left: 30px;
   margin: 0;
@@ -72,7 +81,6 @@ body {
   display: flex;
   gap: 3px;
   width: max-content;
-  height: max-content;
   align-items: end;
   justify-content: end;
   justify-items: end;
@@ -87,23 +95,25 @@ body {
   cursor: pointer;
   padding: 1px 2px;
   transition: transform 0.2s ease-in-out;
+  transform: translateY(-10%);
 }
 
 .search-icon:hover {
-  transform: scale(1.1);
-} 
+  transform: scale(1.1) translateY(-10%);
+}
 
 input {
   margin: 30px 0 0 30px;
   border-radius: 10px;
   width: 250px;
-  height: 20px;
+  height: 25px;
   padding-left: 10px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2) inset;
 }
 
 input:focus {
   border: none;
-  outline: #0039FF solid 2px;
+  outline: #0039ff solid 2px;
 }
 
 .temp-measure {
@@ -112,17 +122,21 @@ input:focus {
   margin-right: 10px;
   padding: 5px 0;
   width: 90px;
-  background-color: rgba(214,214,214,1);
+  background-color: #9f9f9f;
+  color: #e1e1e1;
   align-self: end;
   margin: 0;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #2f2f2f;
 }
 
 .temp-measure:hover {
-  background-color: rgba(232,229,229,1);
+  background-color: #909090;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25) inset;
 }
 
 .temp-style-display {
-  color: #0039FF;
+  color: #0039ff;
   font-weight: 600;
   transform: scale(1.1);
   font-size: 16px;
@@ -134,8 +148,13 @@ input:focus {
   grid-template-columns: 1fr 12fr 1fr;
   grid-row: 2 / 3;
   height: 100%;
-  background: rgb(166,166,166);
-  background: linear-gradient(90deg, rgba(166,166,166,1) 0%, rgba(175,175,175,1) 25%, rgba(195,195,195,1) 50%, rgba(214,214,214,1) 75%, rgba(232,229,229,1) 100%);
+  background: rgb(206, 206, 206);
+  background: linear-gradient(
+    180deg,
+    rgba(206, 206, 206, 1) 0%,
+    rgba(187, 187, 187, 1) 50%,
+    rgba(169, 169, 169, 1) 100%
+  );
   gap: 10px;
   padding-top: 20px;
 }
@@ -173,6 +192,7 @@ input:focus {
   padding: 0 10px 0 10px;
   width: clamp(60px, 250px, 300px);
   height: clamp(300px, 400px, 500px);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
 }
 
 .city-name > * {
@@ -226,6 +246,7 @@ input:focus {
   padding: 0 10px 0 10px;
   width: clamp(60px, 250px, 300px);
   height: clamp(300px, 400px, 500px);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
 }
 
 .current-temperature {
@@ -299,6 +320,7 @@ input:focus {
   padding: 0 10px 0 10px;
   width: clamp(60px, 250px, 300px);
   height: clamp(300px, 400px, 500px);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
 }
 
 .city-precipitation > * {
@@ -372,6 +394,7 @@ input:focus {
   width: clamp(100px, 300px, 350px);
   height: clamp(50, 200px, 200px);
   padding: 0 10px 0 10px;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
 }
 
 .next-forecast > * {
@@ -420,10 +443,11 @@ input:focus {
 }
 
 .footer {
+  display: flex;
+  align-items: center;
   grid-row: -2 / -1;
-  background: rgb(166,166,166);
-  background: linear-gradient(90deg, rgba(166,166,166,1) 0%, rgba(175,175,175,1) 25%, rgba(195,195,195,1) 50%, rgba(214,214,214,1) 75%, rgba(232,229,229,1) 100%);
-  border: 2px solid #747373;
+  background-color: #909090;
+  padding-left: 60px;
 }
 
 a {
@@ -431,8 +455,7 @@ a {
   font-size: 12px;
 }
 
-
-@media(max-width: 790px) {
+@media (max-width: 790px) {
   .main-content {
     grid-template-columns: 1fr;
   }
@@ -453,7 +476,7 @@ a {
   }
 }
 
-@media(max-width: 645px) {
+@media (max-width: 645px) {
   .header {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto;
@@ -476,9 +499,10 @@ a {
     grid-column: 1 / 2;
     justify-self: center;
   }
-  
-  input {
+
+  .search-container > input {
     margin: 0;
+    height: 30px;
   }
 
   .temp-measure {
@@ -510,7 +534,7 @@ a {
     grid-column: 1 / 2;
     align-self: center;
   }
-  
+
   .local-time {
     align-self: center;
   }
@@ -613,5 +637,4 @@ a {
     grid-column: 1 / -1;
     grid-row: 2 / 3;
   }
-
 }
